# Sentorii

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  justfile
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
crates/sentorii-api/: Cargo.toml
crates/sentorii-api/src/: lib.rs  logging.rs
crates/sentorii-cli/: Cargo.toml
crates/sentorii-cli/src/: app.rs  cli.rs  controller.rs  lib.rs  main.rs  mock_engine.rs  state.rs  tui.rs  ui.rs  workflow_dispatcher.rs
crates/sentorii-config/: Cargo.toml
crates/sentorii-config/src/: error.rs  lib.rs  loader.rs  schemas.rs
crates/sentorii-contracts/: Cargo.toml
crates/sentorii-contracts/src/: command.rs  context.rs  event.rs  runner.rs  step.rs  ui.rs  workflow_request.rs
crates/sentorii-core/: Cargo.toml
crates/sentorii-core/src/: dispatcher.rs  error.rs  lib.rs
crates/sentorii-core/src/git/: executor.rs  utils.rs
crates/sentorii-core/src/workflow/: builder.rs  context.rs  runner.rs
crates/sentorii-core/src/workflow/definition/: feature.rs
crates/sentorii-pdk/: Cargo.toml
crates/sentorii-pdk/src/: emitter.rs  error.rs  exec.rs  lib.rs  logging.rs
crates/sentorii-plugin-cargo/: Cargo.toml
crates/sentorii-plugin-cargo/src/: error.rs  loader.rs  main.rs  manifest.rs  plugin.rs  validator.rs
crates/sentorii-plugin-cargo/tests/: integration_test.rs
sentorii-config/: Cargo.toml
sentorii-config/src/: env.rs  error.rs  lib.rs  loader.rs  merger.rs  parser.rs  paths.rs  schemas.rs
sentorii-config/tests/: production_providers.rs
sentorii-contracts/: Cargo.toml
sentorii-contracts/src/: command.rs  context.rs  error.rs  event.rs  lib.rs  runner.rs  step.rs  ui.rs  workflow_request.rs
sentorii-core/: Cargo.toml
sentorii-core/src/: dispatcher.rs  error.rs
sentorii-core/src/git/: executor.rs
sentorii-core/src/workflow/: builder.rs  context.rs  mod.rs  runner.rs  state.rs
