[workspace]
members = ["crates/sentorii-api",
    "crates/sentorii-cli",
    "crates/sentorii-config",
    "crates/sentorii-contracts",
    "crates/sentorii-core", "crates/sentorii-pdk", "crates/sentorii-plugin-cargo",
]
resolver = "3"

[workspace.dependencies]
# External dependencies
tokio = { version = "1.48.0", features = ["full"]}
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.148"
toml = "0.9.8"
uuid = { version = "1.19.0", features = ["v4", "serde"]}
dirs = "6.0.0"
thiserror = "2.0.17"
anyhow = "1.0.100"
log = "0.4.29"
tui-logger = "0.18.0"
paste = "1.0.15"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
ratatui = { version = "0.30.0", features = ["all-widgets"]}
tui-input = "0.15.0"

# Internal dependencies
sentorii-contracts = { version = "0.1.0", path = "crates/sentorii-contracts"}
sentorii-config = { version = "0.1.0", path = "crates/sentorii-config"}
sentorii-core = { version = "0.1.0", path = "crates/sentorii-core"}
sentorii-api = { version = "0.1.0", path = "crates/sentorii-api"}
sentorii-pdk = { version = "0.1.0", path = "crates/sentorii-pdk"}

# Test utils
assert_fs = "1.1.3"
assert_cmd = "2.1.1"
temp-env = "0.3.6"
pretty_assertions = "1.4.1"
tempfile = "3.24.0"

[workspace.lints.rust]
unstable_features = "warn"
unused = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

missing_docs_in_private_items = "allow"

unwrap_used = "deny"
expect_used = "deny"
