[package]
name = "sentorii-config"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
directories = "6.0.0"
toml = "0.9.8"
once_cell = "1.21.3"

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
