[package]
name = "sentorii-config"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
directories = "6.0.0"
toml = "0.9.8"
dirs = "6.0.0"

[dev-dependencies]
assert_fs = "1.1.3"
assert_cmd = "2.1.1"
temp-env = "0.3.6"

[lints]
workspace = true
