[package]
name = "sentorii-contracts"
version = "0.1.0"
edition = "2024"
description = "The single source of truth for all shared data types and traits for the Sentorii application."
license = "MIT"

[dependencies]
serde = { version = "*", features = ["derive"] }
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0.17"
oneshot = "0.1.11"

[features]
test_utils = []

[lints]
workspace = true