[package]
name = "sentorii-core"
version = "0.1.0"
edition = "2024"
description = "Headless, message-driven engine for the Sentorii application."
license = "MIT"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
sentorii-contracts = { path = "../sentorii-contracts" }
sentorii-config = { path = "../sentorii-config"}
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
log = "0.4.29"
async-trait = "0.1.89"

[features]
test-integration = []

[dev-dependencies]
sentorii-contracts = {path = "../sentorii-contracts", features = ["test_utils"]}
pretty_assertions = "1.4.1"
tempfile = "3.23.0"

[lints]
workspace = true