[package]
name = "sentorii-config"
version = "0.1.0"
edition = "2024"
description = "The configuration that drives the Sentorii application"
license = "MIT"

[dependencies]
thiserror = {workspace = true}
serde = { workspace = true}
toml = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
assert_cmd = { workspace = true }
temp-env = { workspace = true }

[lints]
workspace = true
