[package]
name = "sentorii-contracts"
version = "0.1.0"
edition = "2024"
description = "The single source of truth for all shared data types and traits for the Sentorii application."
license = "MIT"

[dependencies]
serde = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true}
paste = { workspace = true }

[features]
test_utils = []

[lints]
workspace = true