[package]
name = "sentorii-plugin-cargo"
version = "0.1.0"
edition = "2024"
description = "A Sentorii plugin for managing the version of Rust Cargo.toml projects."
license = "MIT"

[dependencies]
sentorii-pdk = { workspace = true }
thiserror = { workspace = true }
cargo_metadata = "0.23.1"
toml_edit = "0.23.9"
semver = "1.0.27"

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = "3.1.3"

[lints]
workspace = true
